<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="40dp"
    tools:context=".ui.MainMenu">

    <Button
        android:id="@+id/kalkulator_bmi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kalkulator_bmi"/>

    <Button
        android:id="@+id/kalkulator_umur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kalkulator_umur"/>

    <Button
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Daftar_anggota"/>

    <Button
        android:id="@+id/list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Daftar_anggota2"/>

</androidx.appcompat.widget.LinearLayoutCompat>