<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.BmiView"
    android:padding="40dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jenis_kelamin"
        android:gravity="center"
        android:textSize="15sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/opsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/Laki_Laki"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/laki_laki"/>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:id="@+id/Perempuan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/perempuan"/>
    </RadioGroup>

   <androidx.appcompat.widget.LinearLayoutCompat
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="18dp"
       android:layout_marginBottom="18dp">
       <EditText
           android:id="@+id/input_berat"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:hint="@string/input_berat"
           android:layout_weight="1"/>

       <EditText
           android:id="@+id/input_tinggi"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:hint="@string/input_tinggi"/>
   </androidx.appcompat.widget.LinearLayoutCompat>

    <Button
        android:id="@+id/proses"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hitung"/>


</androidx.appcompat.widget.LinearLayoutCompat>