<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/cat_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/cat"/>

    <LinearLayout
        android:layout_below="@+id/cat_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/textPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_hp"/>

        <TextView
            android:id="@+id/textAdrres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alamat"/>

        <Button
            android:id="@+id/close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close"/>

    </LinearLayout>

</RelativeLayout>